--- a/pom.xml
+++ b/pom.xml
@@ -128,6 +128,15 @@
 			<version>2.3.2</version>
 		</dependency>
 
+		<!-- 上传控件 -->
+		<!-- https://mvnrepository.com/artifact/commons-fileupload/commons-fileupload -->
+		<dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<version>1.3.3</version>
+		</dependency>
+
+
 
 	</dependencies>
 	<build>
