--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,4 +1,7 @@
-jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/o2odb?useUnicode=true&characterEncoding=utf8&useSSL=false
-jdbc.username=user
-jdbc.password=1234
+redis.hostname=127.0.0.1
+redis.port=6379
+redis.database=0
+redis.pool.maxActive=600
+redis.pool.maxIdle=300
+redis.pool.maxWait=3000
+redis.pool.testOnBorrow=true
