--- a/src/main/resources/redis.properties
+++ b/src/main/resources/redis.properties
@@ -1,4 +1,7 @@
-jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/o2odb?useUnicode=true&characterEncoding=utf8&useSSL=false
-jdbc.username=zu39Ale5DIE=
-jdbc.password=gJQ9O+q34qk=
+redis.hostname=192.168.91.115
+redis.port=6379
+redis.database=0
+redis.pool.maxActive=600
+redis.pool.maxIdle=300
+redis.pool.maxWait=3000
+redis.pool.testOnBorrow=true
